DuPont DevSB/src/objects/Project_Risk_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates who is responsible for helping address this issue from the Client side.</description>
        <inlineHelpText>Indicates who is responsible for helping address this issue from the Client side.</inlineHelpText>
        <label>Customer Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002awulEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Impact__c</fullName>
        <label>Potential Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Overview</label>
        <referenceTo>Project_Overview__c</referenceTo>
        <relationshipName>R00N80000002awugEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Upon closure, describe how this issue was resolved.</description>
        <inlineHelpText>Upon closure, describe how this issue was resolved.</inlineHelpText>
        <label>Resolution</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_ID__c</fullName>
        <description>Unique identifier</description>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Risk_Mitigation_Plan__c</fullName>
        <label>Risk Mitigation Plan</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1) New</fullName>
                </value>
                <value>
                    <fullName>2) Working</fullName>
                </value>
                <value>
                    <fullName>3) Pending</fullName>
                </value>
                <value>
                    <fullName>4) Monitoring</fullName>
                </value>
                <value>
                    <fullName>5) Closed</fullName>
                </value>
                <value>
                    <fullName>1 - New</fullName>
                </value>
                <value>
                    <fullName>2 - Monitoring</fullName>
                </value>
                <value>
                    <fullName>3 - Impacting Project</fullName>
                </value>
                <value>
                    <fullName>4 - Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Retest</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Risk/Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Overview__c</columns>
        <columns>Risk_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Project_Victory_S_C_Service_Risks_Issues</fullName>
        <columns>Risk_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Risk_Mitigation_Plan__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>contains</operation>
            <value>Victory</value>
        </filters>
        <label>Project Victory S&amp;C Service Risks/Issues</label>
    </listViews>
    <listViews>
        <fullName>S_C_Service_SoW013_Issues</fullName>
        <columns>Project_Overview__c</columns>
        <columns>Risk_ID__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Overview__c</field>
            <operation>equals</operation>
            <value>S&amp;C Service SoW013</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Risk_Issue__c.Issue</value>
        </filters>
        <label>S&amp;C Service SoW013- Issues</label>
    </listViews>
    <nameField>
        <label>Project Risk/Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Risks/Issues</pluralLabel>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>An Issue is an obstacle impeding progress within the work plan that is controllable and can be resolved with the right people in the right room at the right time.</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>A Risk is the likelihood that an event will occur that prevent the project from be completed on time/budget.</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>